name:                th-new
version:             0.1.0.0
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
build-type:          Simple

executable th-new
  main-is:             Main.hs
  other-extensions:    ScopedTypeVariables, TemplateHaskell
  other-modules:       Language.Haskell.TH.Compile
  build-depends:       base >=4.10 && <4.11,
                       template-haskell >=2.12 && <2.13,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       ghc,
                       ghc-paths >= 0.1.0.8
  default-language:    Haskell2010
